--- a/index.html
+++ b/index.html
@@ -1188,7 +1188,7 @@
             </p>
             <p>
               💻 GitHub:
-              <a href="https://github.com/santhosh-james" target="_blank" rel="noopener" aria-label="GitHub profile">santhosh-james</a>
+              <a href="https://github.com/santhoshjamesc" target="_blank" rel="noopener" aria-label="GitHub profile">santhosh-james</a>
             </p>
             <p>
               💼 Upwork:
