--- a/index.html
+++ b/index.html
@@ -1184,7 +1184,7 @@
             </p>
             <p>
               🔗 LinkedIn:
-              <a href="https://www.linkedin.com/in/santhosh-james" target="_blank" rel="noopener" aria-label="LinkedIn profile">santhosh-james</a>
+              <a href="https://www.linkedin.com/in/sjc730/" target="_blank" rel="noopener" aria-label="LinkedIn profile">santhosh-james</a>
             </p>
             <p>
               💻 GitHub:
